Error Mitigation/MagiCoder/Data/javax_tools/javax_toolsOutputResult.txt
Sample: ForwardingFileObject_2
----------------------------------------------------------------
output:
./Data/javax_tools/javaFiles/ForwardingFileObject_2.java:7: error: constructor ForwardingFileObject in class ForwardingFileObject<F> cannot be applied to given types;
        ForwardingFileObject fileObject = new ForwardingFileObject() {
                                          ^
  required: FileObject
  found:    no arguments
  reason: actual and formal argument lists differ in length
  where F is a type-variable:
    F extends FileObject declared in class ForwardingFileObject
1 error


================================================================

Sample: ForwardingFileObject_3
----------------------------------------------------------------
output:
./Data/javax_tools/javaFiles/ForwardingFileObject_3.java:7: error: constructor ForwardingFileObject in class ForwardingFileObject<F> cannot be applied to given types;
        ForwardingFileObject fileObject = new ForwardingFileObject() {
                                          ^
  required: FileObject
  found:    no arguments
  reason: actual and formal argument lists differ in length
  where F is a type-variable:
    F extends FileObject declared in class ForwardingFileObject
1 error


================================================================

Sample: ForwardingFileObject_4
----------------------------------------------------------------
output:
./Data/javax_tools/javaFiles/ForwardingFileObject_4.java:8: error: constructor ForwardingFileObject in class ForwardingFileObject<F> cannot be applied to given types;
        FileObject fileObject = new ForwardingFileObject() {
                                ^
  required: FileObject
  found:    no arguments
  reason: actual and formal argument lists differ in length
  where F is a type-variable:
    F extends FileObject declared in class ForwardingFileObject
1 error


================================================================

Sample: SimpleJavaFileObject_3
----------------------------------------------------------------
output:
./Data/javax_tools/javaFiles/SimpleJavaFileObject_3.java:5: error: incompatible types: String cannot be converted to URI
        SimpleJavaFileObject fileObject = new SimpleJavaFileObject("Test.java", SimpleJavaFileObject.Kind.SOURCE);
                                                                   ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: SimpleJavaFileObject_4
----------------------------------------------------------------
output:
./Data/javax_tools/javaFiles/SimpleJavaFileObject_4.java:9: error: package StandardJavaFileManager does not exist
            SimpleJavaFileObject fileObject = new SimpleJavaFileObject(uri, StandardJavaFileManager.Kind.SOURCE);
                                                                                                   ^
1 error


================================================================

Sample: SimpleJavaFileObject_5
----------------------------------------------------------------
output:
./Data/javax_tools/javaFiles/SimpleJavaFileObject_5.java:20: error: cannot find symbol
    public JavaFileObject getJavaFileForOutput(Location location, String className, Kind kind, FileObject sibling) {
                                                                                    ^
  symbol:   class Kind
  location: class MyJavaFileManager
./Data/javax_tools/javaFiles/SimpleJavaFileObject_5.java:7: error: cannot find symbol
        SimpleJavaFileObject fileObject = new MyJavaFileObject("Hello.java", Kind.SOURCE);
                                                                             ^
  symbol:   variable Kind
  location: class SimpleJavaFileObject_5
./Data/javax_tools/javaFiles/SimpleJavaFileObject_5.java:29: error: cannot find symbol
        super(URI.create("string:///" + className.replace('.', '/') + kind.extension), kind);
              ^
  symbol:   variable URI
  location: class MyJavaFileObject
./Data/javax_tools/javaFiles/SimpleJavaFileObject_5.java:43: error: cannot assign a value to final variable content
                content = toString();
                ^
4 errors


================================================================

